Fix the collapse of UI in MyPage on editing

--- a/react_view/src/components/MyPage/MyPage.module.css
+++ b/react_view/src/components/MyPage/MyPage.module.css
@@ -58,6 +58,11 @@
     text-align: center;
 }
 
+.PictureEditing {
+    /* width: 20%; */
+    margin: 20px 20px;
+    text-align: center;
+}
 .ProfilePicture {
     width: 200px;
     height: auto;
